deploy/kind-coding/manifests/overlays/gke-autopilot/proxy-cloudsql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wardby-coding-proxy
  namespace: wardby-coding
spec:
  template:
    spec:
      containers:
        - name: proxy
